# bfml

./: .gitignore  README.md  pyproject.toml  setup.cfg
bfml/: experiment.py  metrics.py  run_finetuning.py  run_pretraining.py  trainers.py
bfml/configs/collator/finetuning/: collator_default.yaml
bfml/configs/old/: ner_default.yaml  pretraining_bible_default.yaml  pretraining_cc100_default.yaml  pretraining_distillation_bible_default.yaml  pretraining_distillation_cc100_default.yaml
bfml/configs/trainer/pretraining/: lightmbert.yaml
bfml/configs/training_arguments/finetuning/: ner_default.yaml
bfml/custom_datasets/: pretraining_dataset.py
bfml/data_loading/: bible.py
bfml/scripts/finetuning/: finetune_zs_en.sh
bfml/scripts/jobs/: finetune_xlmr_large.slurm  mlm-aug-en.slurm  mlm-aug-es.slurm  mlm_en.slurm  mlm_translated.slurm  pretrain_xlmr_large.slurm  translate_train_925.slurm  translate_train_mlm-aug.slurm  translate_train_mlm.slurm
bfml/utils/: collator_utils.py  dataset_utils.py  metric_utils.py  model_utils.py  sampling_utils.py  tokenizer_utils.py  trainer_utils.py  training_metrics.py
bfml/utils/wiki/: convert_wiki_to_data.py  create_lbl_dataset.py  create_wiki_samples.py  download_wiki.sh
src/bfml/: combine.py  data_loading.py  datasets.py  experiment.py  roberta_overrides.py  samplers.py  trainers.py
