[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "aiohttp==3.7.3",
    "aiohttp-cors==0.7.0",
    "aioredis==1.3.1",
    "antlr4-python3-runtime==4.8",
    "async-timeout==3.0.1",
    "attrs==20.3.0",
    "bayesian-optimization==1.2.0",
    "beautifulsoup4==4.9.3",
    "blessings==1.7",
    "cachetools==4.2.0",
    "certifi==2020.12.5",
    "chardet==3.0.4",
    "click==7.1.2",
    "cloudpickle==1.6.0",
    "colorama==0.4.4",
    "colorful==0.5.4",
    "configparser==5.0.1",
    "conllu==4.2.2",
    "datasets==1.8.0",
    "decorator==4.4.2",
    "dill==0.3.4",
    "docker-pycreds==0.4.0",
    "docopt==0.6.2",
    "filelock==3.0.12",
    "fsspec==2021.6.0",
    "func-argparse==1.1.1",
    "future==0.18.2",
    "gitdb==4.0.5",
    "GitPython==3.1.12",
    "google==3.0.0",
    "google-api-core==1.24.1",
    "google-api-python-client==1.12.8",
    "google-auth==1.24.0",
    "google-auth-httplib2==0.0.4",
    "googleapis-common-protos==1.52.0",
    "gpustat==0.6.0",
    "grpcio==1.35.0",
    "hiredis==1.1.0",
    "httplib2==0.18.1",
    "huggingface-hub==0.0.16",
    "hyperopt==0.2.7",
    "idna==2.10",
    "joblib==1.0.0",
    "jsonlines==1.2.0",
    "jsonschema==3.2.0",
    "langcodes==3.1.0",
    "language-data==1.0",
    "marisa-trie==0.7.5",
    "marisa-trie-m==0.7.6",
    "mkl-fft==1.2.0",
    "mkl-random==1.1.1",
    "mkl-service==2.3.0",
    "mosestokenizer==1.1.0",
    "msgpack==1.0.2",
    "multidict==5.1.0",
    "multiprocess==0.70.12.2",
    "networkx==2.5",
    "numpy==1.19.4",
    "nvidia-ml-py3==7.352.0",
    "omegaconf==2.1.0",
    "opencensus==0.7.12",
    "opencensus-context==0.1.2",
    "openfile==0.0.7",
    "packaging==21.0",
    "pandas==1.2.1",
    "pathtools==0.1.2",
    "prometheus-client==0.9.0",
    "promise==2.3",
    "protobuf==3.19.1",
    "psutil==5.8.0",
    "py-spy==0.3.4",
    "py4j==0.10.9.2",
    "pyarrow==3.0.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pybind11==2.6.2",
    "pycountry==20.7.3",
    "pyparsing==2.4.7",
    "pyrsistent==0.17.3",
    "python-dateutil==2.8.1",
    "pytz==2020.4",
    "PyYAML==5.3.1",
    "ratelimit==2.2.1",
    "ray==1.8.0",
    "redis==3.5.3",
    "regex==2020.11.13",
    "requests==2.25.1",
    "rsa==4.6",
    "sacremoses==0.0.43",
    "scikit-learn==0.22.2",
    "scipy==1.5.4",
    "sentencepiece==0.1.91",
    "sentry-sdk==0.19.5",
    "seqeval==1.2.2",
    "shortuuid==1.0.1",
    "six",
    "smmap==3.0.4",
    "soupsieve==2.1",
    "submitit==1.3.3",
    "subprocess32==3.5.4",
    "tabulate==0.8.7",
    "tensorboardX==2.1",
    "threadpoolctl==2.1.0",
    "tokenizers==0.10.1",
    "toolwrapper==2.1.0",
    "torch==1.9.0",
    "tqdm==4.49.0",
    "transformers==4.10.0.dev0",
    "typing-extensions==3.7.4.3",
    "uctools==1.3.0",
    "uritemplate==3.0.1",
    "urllib3==1.26.2",
    "wandb==0.10.18",
    "watchdog==0.10.4",
    "wikiextractor",
    "xxhash==2.0.2",
    "yarl==1.6.3"
]
build-backend = "setuptools.build_meta"