[metadata]
name = bfml
version = 0.0.1
author = Abteen Ebrahimi
author_email = abteen.ebrahimi@colorado.edu
description = A base framework for machine learning experiment.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abteen/bfml
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = bfml
packages = find:
python_requires = >=3.8

[options.packages.find]
where = bfml